# kindle2audio

./: .gitignore  README.md  config.json  main.py  ocr.py  pyproject.toml  script.py  synthesis.py  voice_script.py
prompts/: ocr.txt  script.txt  voice_script_system.txt
