[tool.poetry]
name = "kindle2audio"
version = "0.1.0"
description = ""
authors = ["Shun Fukusumi <shun.fukusumi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pyautogui = "^0.9.54"
pillow = "^11.1.0"
google-genai = "^1.9.0"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
ipython = "^9.0.2"
ruff = "^0.11.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
